--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="./icon.png" />
-    <title>Slate : Create and share websites that are self contained without storing them on server</title>
+    <title>Website-Inhalte in eine URL verpacken</title>
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="./dist/copyToClipboard.min.js"></script>
@@ -19,10 +19,10 @@
 <body>
 
     <div id="app">
-        <input style="border-style: dashed; padding-left: 10px;" v-model="title" id="title" placeholder="New Untitled Post" />
+        <input style="border-style: dashed; padding-left: 10px;" v-model="title" id="title" placeholder="Mein Platzhalter-Titel" />
         <br>
         <center>
-            <textarea style="width:80%;" rows="20" v-model="content" id="contentInput" placeholder="Write something you want to share ..."></textarea>
+            <textarea style="width:80%;" rows="20" v-model="content" id="contentInput" placeholder="Platz für Deine Inhalte ..."></textarea>
             <br>
             <button v-clipboard:copy="generateUrl()" v-clipboard:success="onCopy" v-clipboard:error="onError" v-bind:class="{copySuccess: copySuccess}">{{copyMessage}}</button>
             <button @click="generateQr()">{{ qrMessage}}</button>
@@ -44,7 +44,7 @@
                 title: '',
                 content: '',
                 url: '',
-                copyMessage: 'COPY URL',
+                copyMessage: 'URL kopieren',
                 copySuccess: false,
                 copyError: false,
                 qrMessage: 'GENERATE QR',
@@ -68,7 +68,7 @@
                 },
                 onCopy: function (e) {
                 // alert('You just copied: ' + e.text)
-                this.copyMessage = "URL COPIED TO CLIPBOARD";
+                this.copyMessage = "URL erfolgreich kopiert.";
                 this.copySuccess = true;
                 setTimeout(() => {
                     this.copyMessage = "COPY URL";
